@@ -1,4 +1,5 @@
 4.0
+	+ New welcome page on first install
 	+ Set version to 4.0
 	+ New package selection page
 	+ Update installation slides
